# text-cleaner

./: .gitignore  Local.xcconfig.example  README.md  USAGE.it.md  USAGE.md  project.yml
.github/workflows/: build-windows.yml
Scripts/: build-app-icon.swift  make-dmg.sh
TextCleaner/: AppDelegate.swift  AppIcon.swift  AppSettings.swift  CharacterCatalog.swift  CharacterPickerController.swift  CharacterPickerView.swift  EmojiCatalog.swift  HotKeyManager.swift  HotKeySettings.swift  Info.plist  KeyboardShortcut.swift  PasteSimulator.swift  PopupTheme.swift  PopupView.swift  PopupWindowController.swift  PreviewView.swift  RichTextView.swift  SettingsView.swift  SettingsWindowController.swift  ShortcutRecorder.swift  TextAction.swift  TextCleanerApp.swift  TextStyler.swift  URLCleaner.swift  WindowDragHandle.swift
TextCleanerTests/: URLCleanerTests.swift
WinTextCleaner/: package-lock.json  package.json
WinTextCleaner/src/: App.css  App.jsx
WinTextCleaner/src-tauri/: Cargo.toml  tauri.conf.json  test  test.rs
WinTextCleaner/src-tauri/capabilities/: desktop.json
WinTextCleaner/src-tauri/icons/: icon.icns
WinTextCleaner/src-tauri/src/: lib.rs  main.rs
docs/: README.md  index.html
